--- a/inst/tutorials/Session3/Contagion.Rmd
+++ b/inst/tutorials/Session3/Contagion.Rmd
@@ -14,7 +14,6 @@ library(learnr)
 library(tidyverse)
 library(knitr)
 library(RColorBrewer) #for colour palettes
-library(lme4) #multilevel models
 
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
@@ -278,7 +277,7 @@ predict(
   data.frame( #enter the variables and values for which you want predictions:
     sex = c(0, 1), #zero for boys, one for girls
     exposure = c(0, 0), #both the boy and girl having 0 exposure...
-    cum_friends_adopted = c(5, 5) #... and 0 friends who already adopted
+    cum_friends_adopted = c(0, 0) #... and 0 friends who already adopted
   ),
   type = "response" #gives probabilities not log odds
 )
@@ -371,11 +370,9 @@ Logistic regression is like ordinary regression except that:
 
 ## Further Reading
 
-- Rogers, E. M. (1962). _Diffusion of Innovations_ (4th ed.). Free Press. The classic text on the diffusion of innovations through networks. 
+- Centola, D. (2018). _How Behavior Spreads: The Science of Complex Contagions_. Princeton University Press. Presents an influential perspective on (analyzing) contagion through networks.
 
-- Valente, T. W. (1995). _Network Models of the Diffusion of Innovations_. Hampton Press. offers a more recent and accessible overview.
-
-- Centola, D. (2018). _How Behavior Spreads: The Science of Complex Contagions_. Princeton University Press. Presents an influential perspective on (analysing) contagion through networks.
+- - Miles, J., & Shevlin, M. (2001). _Applying regression & correlation: A guide for students and researchers_. SAGE. Also contains a chapter offering an introduction to logistic regression.
 
 - For thorough understanding of logistic regression, study: Hosmer, D. W., Lemeshow, S., & Sturdivant, R. X. (2013). _Applied Logistic Regression_ (3rd ed. or later). Wiley.
 
